<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="scene_focus"
        android:shortcutShortLabel="@string/shortcut_focus_short"
        android:shortcutLongLabel="@string/shortcut_focus_long"
        android:enabled="true">
        <intent
            android:action="com.example.APPLY_SCENE"
            android:targetPackage="com.aistudio.soundmax.wvnk"
            android:targetClass="com.example.MainActivity">
            <extra android:name="scene_id" android:value="focus" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="scene_commute"
        android:shortcutShortLabel="@string/shortcut_commute_short"
        android:shortcutLongLabel="@string/shortcut_commute_long"
        android:enabled="true">
        <intent
            android:action="com.example.APPLY_SCENE"
            android:targetPackage="com.aistudio.soundmax.wvnk"
            android:targetClass="com.example.MainActivity">
            <extra android:name="scene_id" android:value="commute" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="scene_podcast"
        android:shortcutShortLabel="@string/shortcut_podcast_short"
        android:shortcutLongLabel="@string/shortcut_podcast_long"
        android:enabled="true">
        <intent
            android:action="com.example.APPLY_SCENE"
            android:targetPackage="com.aistudio.soundmax.wvnk"
            android:targetClass="com.example.MainActivity">
            <extra android:name="scene_id" android:value="podcast" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="scene_sleep"
        android:shortcutShortLabel="@string/shortcut_sleep_short"
        android:shortcutLongLabel="@string/shortcut_sleep_long"
        android:enabled="true">
        <intent
            android:action="com.example.APPLY_SCENE"
            android:targetPackage="com.aistudio.soundmax.wvnk"
            android:targetClass="com.example.MainActivity">
            <extra android:name="scene_id" android:value="sleep" />
        </intent>
    </shortcut>
</shortcuts>
